fix(header-list): increase spacing among links

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -37,7 +37,7 @@ a:active {
 }
 
 .header-list li + li {
-  @apply ml-2;
+  @apply ml-4;
 }
 
 .markdown * + * {
